--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
-layout: default
 ---
 <article itemscope itemtype="http://schema.org/BlogPosting">
+  {% assign images = post.images %}
+  {% for image in images %}
+    <p>{{ image }}</p>
+  {% endfor %}
   {{ content }}
 </article>
