--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header" role="banner">
   <nav class="nav" role="navigation">
     <ul>
-      {{ site.title }}
+      <li>{{ site.title }}</li>
       {% include pages_list.html %}
     </ul>
   </nav>
