--- a/css/all.sass
+++ b/css/all.sass
@@ -33,6 +33,9 @@
   font-size: calc(16px + (24 - 16) * (100vw - 320px)/(1600 - 320))
   line-height: 1.5
 
+@-ms-viewport
+  width: device-width
+
 *, *:before, *:after
   box-sizing: border-box
 
@@ -87,4 +90,8 @@ nav ul
   margin-bottom: 1.5rem
 
 .footer
+  display: flex
+  justify-content: center
+  align-items: center
   @extend %widthSize
+  height: 10vh
