--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,6 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | replace: '//', '/' }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   {% endcomment %}
-  <script src="{{ 'modernizr.js' | prepend: '/js/vendor/' | prepend: asset_path | replace: '//', '/' }}"></script>
+  <script src="{{ 'flickity.pkgd.min.js' | prepend: '/js/vendor/' | replace: '//', '/' }}"></script>
 
 </head>
