--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,8 @@
 {% assign scripts = page.scripts %}
 {% if scripts %}
   {% for js in scripts %}
-    <script src="{{ js | prepend: 'js/' | prepend: asset_path }}"></script>
+      <script src="{{ js | prepend: 'js/' | prepend: asset_path }}"></script>
   {% endfor %}
 {% endif %}
+<script src="{{ 'all.js' | prepend: 'js/' }}"></script>
+
