--- a/css/all.sass
+++ b/css/all.sass
@@ -22,6 +22,7 @@
 //------------------------------------------------------------
 
 @import 'modules/mixins'
+@import 'modules/flickity'
 
 //------------------------------------------------------------
 //
