--- a/css/all.sass
+++ b/css/all.sass
@@ -96,3 +96,12 @@ nav ul
   align-items: center
   @extend %widthSize
   height: 10vh
+
+// Carousel
+.carousel
+  background: #eee
+
+.carousel-cell
+  width: 100%
+  height: auto
+  margin-right: 10px
