--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <p>&copy; 2018</p>
+    <p>&copy; 2018 {{ site.title }}</p>
     {% comment %}
     <p><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></p>
     {% endcomment %}
