--- a/css/all.sass
+++ b/css/all.sass
@@ -12,8 +12,8 @@
 
 @import 'base/bourbon/bourbon'
 @import 'base/normalize'
-@import 'base/variables'
-@import 'base/syntax-highlighting'
+// @import 'base/variables'
+// @import 'base/syntax-highlighting'
 
 //------------------------------------------------------------
 //
@@ -54,7 +54,8 @@ body
   // +prefixer(font-feature-settings, "kern" 1, webkit moz o spec)
   // +rootsize
   opacity: 0
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+  // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+  font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif
 
 a
   text-decoration: none
