Update text, add font

--- a/css/all.sass
+++ b/css/all.sass
@@ -12,6 +12,7 @@
 
 @import 'base/bourbon/bourbon'
 @import 'base/normalize'
+
 // @import 'base/variables'
 // @import 'base/syntax-highlighting'
 
@@ -23,6 +24,7 @@
 
 @import 'modules/mixins'
 @import 'modules/flickity'
+@import url('https://fonts.googleapis.com/css?family=Oranienbaum')
 
 //------------------------------------------------------------
 //
@@ -55,7 +57,9 @@ body
   // +rootsize
   opacity: 0
   // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
-  font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif
+  // font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif
+  font-family: 'Oranienbaum', serif
+
 
 a
   text-decoration: none
