--- a/css/all.sass
+++ b/css/all.sass
@@ -104,6 +104,11 @@ nav ul
   top: 0
   background-color: #fff
   overflow: hidden
+  justify-content: space-between
+  h1
+    font-size: inherit
+    font-weight: normal
+
 
 .hide
   top: -80px
