--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header" role="banner">
+  <h1>{{ site.title }}</h1>
   <nav class="nav" role="navigation">
     <ul>
-      <li>{{ site.title }}</li>
       {% include pages_list.html %}
     </ul>
   </nav>
