--- a/_sass/modules/_flickity.scss
+++ b/_sass/modules/_flickity.scss
@@ -112,7 +112,6 @@ https://flickity.metafizzy.co
 .flickity-page-dots {
   width: 100%;
   padding: 0;
-  margin: 0;
   list-style: none;
   text-align: center;
 }
@@ -128,6 +127,10 @@ https://flickity.metafizzy.co
   border-radius: 50%;
   opacity: 0.25;
   cursor: pointer;
+  transition: opacity 250ms ease-out;
+  -moz-transition: opacity 250ms ease-out;
+  -webkit-transition: opacity 250ms ease-out;
+  -o-transition: opacity 250ms ease-out;
 }
 
 .flickity-page-dots .dot.is-selected {
