Fix text glitch

--- a/css/all.sass
+++ b/css/all.sass
@@ -47,7 +47,7 @@
 *, *:before, *:after
   box-sizing: border-box
 
-.js body, .no-js body, .wf-active body, .wf-inactive body
+.wf-active body
   opacity: 1
 
 body
