Add info to footer, add smooth scroll

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <footer class="footer">
 
+
+  <div id="info">
+    {% include info.html %}
+  </div>
   <p>Copyright &copy; 2016—2018 {{ site.title }} - All Rights Reserved</p>
 
 </footer>
