--- a/css/all.sass
+++ b/css/all.sass
@@ -81,7 +81,7 @@ nav ul
   text-align: center
 
 .header
-  @extend %widthSize
+  @extend %flexWidth
   padding-top: modular-scale(1)
   position: fixed
   background: white
@@ -107,7 +107,7 @@ nav ul
   top: -80px
 
 .main
-  // @extend %widthSize
+  // @extend %flexWidth
   margin-top: 8em
   text-transform: uppercase
 
@@ -116,11 +116,12 @@ nav ul
   display: block
   margin-bottom: 5rem
 
+#info
+
 .footer
-  @extend %widthSize
-  justify-content: center
-  align-items: center
-  height: 10vh
+  max-width: 1080px
+  margin: 0 auto
+
 
 //------------------------------------------------------------
 //
@@ -138,7 +139,7 @@ nav ul
 //
 //------------------------------------------------------------
 
-%widthSize
+%flexWidth
   display: flex
   padding-left: modular-scale(-5)
   padding-right: modular-scale(-5)
