--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <h1>{{ site.title }}</h1>
   <nav class="nav" role="navigation">
     <ul>
-      <li><a href="#">Info</a></li>
+      <li><a id="scrollButton" href="#info">Info</a></li>
     </ul>
   </nav>
 </header>
