--- a/_sass/modules/_flickity.scss
+++ b/_sass/modules/_flickity.scss
@@ -85,6 +85,13 @@ https://flickity.metafizzy.co
   border-radius: 50%;
   /* vertically center */
   transform: translateY(-50%);
+  .flickity-button-icon {
+    position: absolute;
+    left: 20%;
+    top: 20%;
+    width: 60%;
+    height: 60%;
+  }
 }
 
 .flickity-prev-next-button.previous { left: 10px; }
@@ -99,14 +106,6 @@ https://flickity.metafizzy.co
   left: 10px;
 }
 
-.flickity-prev-next-button .flickity-button-icon {
-  position: absolute;
-  left: 20%;
-  top: 20%;
-  width: 60%;
-  height: 60%;
-}
-
 /* ---- page dots ---- */
 
 .flickity-page-dots {
@@ -114,25 +113,23 @@ https://flickity.metafizzy.co
   padding: 0;
   list-style: none;
   text-align: center;
+  .dot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    margin: 0 5px;
+    background: #333;
+    border-radius: 50%;
+    opacity: 0.25;
+    cursor: pointer;
+    transition: opacity 250ms ease-out;
+    -moz-transition: opacity 250ms ease-out;
+    -webkit-transition: opacity 250ms ease-out;
+    -o-transition: opacity 250ms ease-out;
+  }
+  .dot.is-selected {
+    opacity: 1;
+  }
 }
 
 .flickity-rtl .flickity-page-dots { direction: rtl; }
-
-.flickity-page-dots .dot {
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  margin: 0 5px;
-  background: #333;
-  border-radius: 50%;
-  opacity: 0.25;
-  cursor: pointer;
-  transition: opacity 250ms ease-out;
-  -moz-transition: opacity 250ms ease-out;
-  -webkit-transition: opacity 250ms ease-out;
-  -o-transition: opacity 250ms ease-out;
-}
-
-.flickity-page-dots .dot.is-selected {
-  opacity: 1;
-}
