--- a/css/all.sass
+++ b/css/all.sass
@@ -129,6 +129,10 @@ nav ul
 //
 //------------------------------------------------------------
 
+.carousel
+  max-width: 1080px
+  margin: 0 auto
+
 .carousel-cell
   width: 100%
   height: auto
