--- a/css/all.sass
+++ b/css/all.sass
@@ -52,7 +52,7 @@
 
 body
   opacity: 0
-  font-family: 'Oranienbaum', serif
+  font-family: Bodoni, 'Oranienbaum', serif
 
 a
   text-decoration: none
@@ -120,7 +120,9 @@ nav ul
 
 .footer
   max-width: 1080px
-  margin: 0 auto
+  margin: 10em auto
+  padding-left: modular-scale(-5)
+  padding-right: modular-scale(-5)
 
 
 //------------------------------------------------------------
