--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,1 +1,4 @@
-<p>Dominic Santos is a homo porn star</p>
+<p>Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles. A native San Franciscan, Dominic received his B.A. in Cinema from San Francisco State University in 2009.
+</p>
+
+All inquiries: info@dominicsantos.com  Instagram: @dompatrol
