--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="header" role="banner">
-  <h1>{{ site.title }}</h1>
+  <h1><a href="#">{{ site.title }}</a></h1>
   <nav class="nav" role="navigation">
     <ul>
-      <li><a id="scrollButton" href="#info">Info</a></li>
+      <li><a data-scroll href="#info">Info</a></li>
     </ul>
   </nav>
 </header>
