Adjust footer width, update projects, update info

--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,4 +1,1 @@
-<p>Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles. A native San Franciscan, Dominic received his B.A. in Cinema from San Francisco State University in 2009.
-</p>
-
-All inquiries: info@dominicsantos.com  Instagram: @dompatrol
+<p>Dominic Santos (b. 1985, San Francisco) is a multidisciplinary artist and director based in Los Angeles. All inquiries: info@dominicsantos.com  Instagram: @dompatrol.</p>
