--- a/css/all.sass
+++ b/css/all.sass
@@ -150,7 +150,7 @@ nav ul
   width: 100%
 
 @media only screen and (min-width: 768px)
-  .header
+  .header, .footer
     padding-left: 8vw
     padding-right: 8vw
   .main
