Add projects layout, update footer,remove info include

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
+<div class="info">
+  {{ page.content }}
+</div>
 <footer class="footer">
 
-  <div id="info">
-    {% include info.html %}
-  </div>
   <p>Copyright &copy; 2016—2018 {{ site.title }} - All Rights Reserved</p>
 
 </footer>
