--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-<div class="info">
-  {{ page.content }}
-</div>
 <footer class="footer">
+  <div id="info">
+    {{ page.content }}
+  </div>
 
   <p>Copyright &copy; 2016—2018 {{ site.title }} - All Rights Reserved</p>
 
