--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@ layout: compress
   {% include header.html %}
   <main class="main" role="main">
     {{ content }}
+    <div id="info">
+      {{ page.content }}
+    </div>
   </main>
   {% include footer.html %}
 </body>
