--- a/css/all.sass
+++ b/css/all.sass
@@ -51,8 +51,10 @@
   opacity: 1
 
 body
-  opacity: 0
+  display: flex
+  flex-direction: column
   font-family: Bodoni, 'Oranienbaum', serif
+  opacity: 0
 
 a
   text-decoration: none
@@ -110,16 +112,23 @@ nav ul
 .main
   // @extend %flexWidth
   margin-top: 8em
+  flex: 1 0 auto
   text-transform: uppercase
-
 
 .article
   display: block
   margin-bottom: 5rem
 
-.footer
+#info
   max-width: 1080px
   margin: 10em auto
+  padding-left: modular-scale(-5)
+  padding-right: modular-scale(-5)
+
+.footer
+  flex-shrink: 0
+  max-width: 1080px
+  margin: 1em auto
   padding-left: modular-scale(-5)
   padding-right: modular-scale(-5)
 
