--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -29,14 +29,20 @@ layout: default
   {% else %}
     {% for image in images %}
       {% if site.env == 'production' or jekyll.environment == "production" %}
-      <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+        {% if project.permalink %}
+          <a href="{{ project.permalink}}"><img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/></a>
+        {% else %}
+          <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+        {% endif %}
       {% else %}
-      <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
+        {% if project.permalink %}
+          <a href="{{ project.permalink}}"><img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/></a>
+        {% else %}
+          <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
+        {% endif %}
       {% endif %}
     {% endfor %}
   {% endif %}
-
-
   <div class="caption">{{ project.content }}</div>
 </article>
 {% endunless %}
