--- a/css/all.sass
+++ b/css/all.sass
@@ -24,6 +24,22 @@
 @import 'modules/mixins'
 @import 'modules/flickity'
 
+
+//------------------------------------------------------------
+//
+//  Placeholders
+//
+//------------------------------------------------------------
+
+%flexWidth
+  display: flex
+  padding-left: modular-scale(-5)
+  padding-right: modular-scale(-5)
+  width: 100%
+
+
+%upperCasing
+  text-transform: uppercase
 //------------------------------------------------------------
 //
 //  Structure
@@ -84,25 +100,23 @@ nav ul
 
 .header
   @extend %flexWidth
+  @extend %upperCasing
+  align-items: center
+  display: flex
+  height: 80px
+  justify-content: space-between
+  overflow: hidden
   padding-top: modular-scale(1)
   position: fixed
-  background: white
-  z-index: 999
-
-.header
-  display: flex
-  align-items: center
-  height: 80px
-  transition: top 250ms ease
-  position: fixed
-  width: 100%
   top: 0
-  background-color: #fff
-  overflow: hidden
-  justify-content: space-between
+  transition: top 250ms ease
+  width: 100%
+  z-index: 999
   h1
     font-size: inherit
     font-weight: normal
+    font-family: sans-serif
+    font-weight: strong
 
 
 .hide
@@ -120,8 +134,8 @@ nav ul
       box-shadow: inset 0 -1.7rem map-get($colors, 'soft')
 
 .article
+  @extend %upperCasing
   display: block
-  text-transform: uppercase
   margin-bottom: 5rem
 
 #info
@@ -153,17 +167,6 @@ nav ul
   width: 100%
   height: auto
 
-//------------------------------------------------------------
-//
-//  Placeholders
-//
-//------------------------------------------------------------
-
-%flexWidth
-  display: flex
-  padding-left: modular-scale(-5)
-  padding-right: modular-scale(-5)
-  width: 100%
 
 @media only screen and (min-width: 768px)
   .header, .footer
