--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -16,15 +16,16 @@ $animation: (
   speedIn : 200ms,
   speedOut: 1200ms
 );
+
 $colors: (
-  'background'   : lemonchiffon,
+  'background'   : #000,
   'hover'        : #47FC00,
-  'text'         : #000,
+  'text'         : #fff,
   'soft'         : rgba(0,0,0, 0.1),
-  'anchor'       : #000,
+  'anchor'       : #fff,
   'gray'         : #828282,
-  'code'         : rgba(0, 0, 0, 0.05)
 );
+
 $breakpoints: (
   mobile    : 481px,
   tablet    : 768px,
