--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 {% if site.env == 'production' or jekyll.environment == "production" %}
-<script src="{{ 'bundle.js' | prepend: '/js/dist/' | prepend: site.baseurl }}"></script>
+<script src="{{ 'bundle.js' | prepend: '/js/dist/' | prepend: site.url }}"></script>
 {% else %}
 <script src="{{ 'bundle.js' | prepend: '/js/dist/' }}"></script>
 {% endif %}
