--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge" shrink-to-fit="no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="index, follow">
   <title>{% if page.title %}{{ page.title }} — {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
@@ -21,7 +21,7 @@
   {% assign asset_path = site.assets.asset_path %}
 
   {% if site.env == 'production' or jekyll.environment == "production" %}
-  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: site.baseurl | replace: '//', '/' }}">
+  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: site.url | replace: '//', '/' }}">
   {% else %}
   <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | replace: '//', '/' }}">
   {% endif %}
