--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -17,7 +17,7 @@ layout: default
       <img src="{{ image }}" alt=""/>
       {% else %}
         {% if site.env == 'production' or jekyll.environment == "production" %}
-        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | prepend: site.url | append: '_1080.jpg' }}" alt=""/>
         {% else %}
         <img data-flickity-lazyload="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
         {% endif %}
@@ -30,9 +30,9 @@ layout: default
     {% for image in images %}
       {% if site.env == 'production' or jekyll.environment == "production" %}
         {% if project.permalink %}
-          <a href="{{ project.permalink}}"><img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/></a>
+          <a href="{{ project.permalink}}"><img src="{{ image | prepend: image_asset_path | prepend: site.url | append: '_1080.jpg' }}" alt=""/></a>
         {% else %}
-          <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+          <img src="{{ image | prepend: image_asset_path | prepend: site.url | append: '_1080.jpg' }}" alt=""/>
         {% endif %}
       {% else %}
         {% if project.permalink %}
