--- a/css/all.sass
+++ b/css/all.sass
@@ -149,6 +149,8 @@ nav ul
   padding-right: modular-scale(-5)
 
 .footer
+  font-size: 0.9rem
+  opacity: 0.5
   flex-shrink: 0
   max-width: 1080px
   margin: 1em auto
@@ -178,6 +180,7 @@ nav ul
   .main
     padding-left: 8vw
     padding-right: 8vw
+
 
 
 // @media only screen and (min-width: 1030px)
