--- a/css/all.sass
+++ b/css/all.sass
@@ -150,7 +150,7 @@ nav ul
   padding-right: modular-scale(-5)
 
 .footer
-  font-size: 0.75rem
+  font-size: 3vw
   opacity: 0.5
   flex-shrink: 0
   margin: 1em auto
@@ -180,6 +180,8 @@ nav ul
   .main
     padding-left: 8vw
     padding-right: 8vw
+  .footer
+    font-size: 0.8rem
 
 
 
