--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 </footer>
 
 {% if site.env == 'production' or jekyll.environment == "production" %}
-<script src="{{ 'bundle.js' | prepend: '/js/dist/' | prepend: site.url }}"></script>
+<script src="{{ 'main.bundle.js' | prepend: '/js/dist/' | prepend: site.url }}"></script>
 {% else %}
-<script src="{{ 'bundle.js' | prepend: '/js/dist/' }}"></script>
+<script src="{{ 'main.bundle.js' | prepend: '/js/dist/' }}"></script>
 {% endif %}
 
