--- a/css/all.css
+++ b/css/all.css
@@ -1,12 +1,163 @@
+@import "../css/flickity.css";
+
+@media screen and (min-width: 320px) {
+  :root {
+    font-size: calc(16px + (24 - 16) * (100vw - 320px)/(1600 - 320));
+    line-height: 1.5;
+  }
+}
+@media screen and (min-width: 1000px) {
+  :root {
+    font-size: 22px;
+  }
+}
+@-ms-viewport {
+  width: device-width;
+}
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+.wf-active body {
+  opacity: 1;
+}
+
 :root {
   --color-text: #fff;
+  --color-background: #000;
+  --padding-spacer: 1.5em;
 }
 
 body {
-  background: black;
-  margin: 0;
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  font-family: "Helvetica", arial, sans-serif;
+  opacity: 0;
+  background: var(--color-background);
   color: var(--color-text);
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+img, video, object, embed {
+  max-width: 100%;
+  height: auto !important;
+}
+
+img {
+  -ms-interpolation-mode: bicubic;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: middle;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+nav ul li {
+  display: inline-block;
+}
+
+.caption {
+  width: 80%;
+  max-width: 1080px;
+  margin: auto;
+  text-align: center;
+  margin-top: 1.5em;
+}
+
+.header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  padding-top: var(--padding-spacer);
+  position: fixed;
+  top: 0;
+  transition: top 250ms linear;
+  width: 100%;
+  z-index: 999;
+}
+.header h1 {
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: inherit;
+  letter-spacing: 0.05rem;
+}
+.header h1 a {
+  box-shadow: inset 0 0 0 2px var(--color-text);
+  padding: 0.1rem 1.5rem;
+}
+
+.hide {
+  top: -80px;
+}
+
+.main {
+  margin-top: 4em;
+  flex: 1 0 auto;
+}
+.main a {
+  cursor: alias;
+  box-shadow: inset 0 -1px var(--color-text);
+  transition: box-shadow 100ms ease;
+}
+.main a:hover {
+  box-shadow: inset 0 -1.7rem var(--color-text);
+  color: #000;
+}
+
+.article {
+  display: block;
+  margin-bottom: 5rem;
+}
+
+#info {
+  text-align: center;
+  max-width: 1080px;
+  margin: 10em auto;
+  padding-left: modular-scale(-5);
+  padding-right: modular-scale(-5);
+}
+
+.footer {
+  font-size: 3vw;
+  opacity: 0.5;
+  flex-shrink: 0;
+  margin: 1em auto;
+  padding-left: modular-scale(-5);
+  padding-right: modular-scale(-5);
+}
+
+.carousel {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.carousel-cell {
+  width: 100%;
+  height: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .header, .footer {
+    padding-left: 8vw;
+    padding-right: 8vw;
+  }
+
+  .main {
+    padding-left: 8vw;
+    padding-right: 8vw;
+  }
+
+  .footer {
+    font-size: 0.8rem;
+  }
 }
