--- a/css/all.css
+++ b/css/all.css
@@ -25,7 +25,7 @@
 
 :root {
   --color-text: #fff;
-  --color-background: #000;
+  --color-background: rgba(26,21,27,1);
   --padding-spacer: 1.5em;
   --font-family: "Fenwick", Arial, "Helvetica", sans-serif;
 }
