--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,10 +29,12 @@
 
     gtag('config', 'UA-4820200-1');
   </script>
+
   {% else %}
   <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | replace: '//', '/' }}">
   {% endif %}
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | replace: '//', '/' }}">
   <link rel="alternate" href="{{ site.url }}" hreflang="en-us" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </head>
