Add arrows, update swiper settings

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -26,6 +26,8 @@ layout: default
       </div>
       {% endfor %}
     </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
   </div>
 
   {% else %}
