--- a/_layouts/compress.html
+++ b/_layouts/compress.html
@@ -20,7 +20,8 @@ _       ______  _____     ___    __        ____     ____       __
  ____)  ) |   __   | |  |  \    |    |  |     \     /   ____)  )
 (      (__|  (__)  |_|  |___\   |____|  |______)   (___(      (__
 
-Dominic Santos © 2018
+Dominic Santos © 2022
+Website: Dave Santos
 
  -->
 
