--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 
-  <p>Copyright &copy; 2016—2018 {{ site.title }} - All Rights Reserved</p>
+  <p>Copyright &copy; 2022 {{ site.title }} - All Rights Reserved</p>
 
 </footer>
 
