--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,8 +33,10 @@
   {% else %}
   <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | replace: '//', '/' }}">
   {% endif %}
+  <link rel="stylesheet" href="https://use.typekit.net/oaa0edq.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | replace: '//', '/' }}">
   <link rel="alternate" href="{{ site.url }}" hreflang="en-us" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
 </head>
