--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,7 +5,7 @@ layout: default
 {% assign projects = site.projects | sort:"weight" %}
 {% for project in projects %}
 {% unless project.draft %}
-<article class="article {% if project.half %}half{% endif %}">
+<article class="article project">
 
   {% assign images = project.images %}
 
@@ -27,8 +27,12 @@ layout: default
       </div>
       {% endfor %}
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27 44"><path d="M27,22L27,22L5,44l-2.1-2.1L22.8,22L2.9,2.1L5,0L27,22L27,22z"></svg>
+    </div>
+    <div class="swiper-button-prev">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27 44"><path d="M0,22L22,0l2.1,2.1L4.2,22l19.9,19.9L22,44L0,22L0,22L0,22z"></svg>
+    </div>
   </div>
 
   {% else %}
